--- a/style.css
+++ b/style.css
@@ -2,4 +2,42 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+:root {
+    font-family: 'Source Serif 4', serif;
+    font-size: 62.5%;
+}
+
+body {
+    color: #A54328;
+    font-size: 1.6rem;
+}
+
+button {
+    font-family: 'Source Serif 4', serif;
+    font-weight: 500;
+
+    background-color: #A54328;
+    color: white;
+
+    padding: .8rem 1.2rem;
+    border: 0;
+    border-radius: .6rem;
+    margin-top: 1.8rem;
+}
+
+h1,
+h2 {
+    font-size: 2.8rem;
+    line-height: 3.6rem;
+}
+
+p,
+li,
+strong {
+    font-size: 1.4rem;
+    line-height: 1.8rem;
 }
