--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -16,6 +17,24 @@ body {
     font-size: 1.6rem;
 }
 
+main {
+    max-width: 32rem;
+
+    margin-inline: auto;
+
+    padding: 5.6rem 4rem;
+    box-sizing: content-box;
+
+    display: flex;
+    flex-direction: column;
+    gap: 3.2rem;
+}
+
+img {
+    width: 100%;
+    margin-block: 3.2rem;
+}
+
 button {
     font-family: 'Source Serif 4', serif;
     font-weight: 500;
@@ -26,7 +45,7 @@ button {
     padding: .8rem 1.2rem;
     border: 0;
     border-radius: .6rem;
-    margin-top: 1.8rem;
+    margin-top: 3.2rem;
 }
 
 h1,
@@ -35,9 +54,22 @@ h2 {
     line-height: 3.6rem;
 }
 
+h2 {
+    margin-bottom: 3.2rem;
+}
+
 p,
 li,
 strong {
     font-size: 1.4rem;
     line-height: 1.8rem;
+}
+
+ul,
+ol {
+    padding-left: 2.4rem;
+}
+
+ul {
+    margin-bottom: 2.4rem;
 }
