--- a/style.css
+++ b/style.css
@@ -50,6 +50,8 @@ button {
 
 h1,
 h2 {
+    /* clamp(min, ideal, alto) */
+    /*font-size: clamp(2.8rem, 2vw + 1rem, 4rem); */
     font-size: 2.8rem;
     line-height: 3.6rem;
 }
